legit api key call test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,20 @@ services:
       retries: 10
       start_period: 90s
 
+  kafka-setup:
+    image: confluentinc/cp-kafka:7.3.0
+    container_name: kafka-setup
+    depends_on:
+      kafka:
+        condition: service_healthy
+    command: >
+      sh -c "
+        echo 'Waiting for Kafka to be ready...' &&
+        cub kafka-ready -b kafka:29092 1 30 &&
+        echo 'Kafka is ready!' &&
+        for topic in realtime-traffic cctv-stream smart-signal traffic-incidents road-network-updates facility-updates public-transport-updates local-events floating-population weather-forecast; do
+          kafka-topics --create --if-not-exists --topic $$topic --bootstrap-server kafka:29092 --partitions 1 --replication-factor 1;
+        done && echo 'All topics created successfully.'"
   db:
     image: postgres:13
     container_name: db
@@ -37,6 +51,8 @@ services:
       POSTGRES_DB: traffic_db
     ports:
       - "6432:5432"
+    volumes:
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   spark-master:
     image: apache/spark:3.5.1
@@ -44,7 +60,7 @@ services:
     user: root
     ports:
       - "8080:8080"
-      - "7077:7077"
+      - "7200:7200"
     volumes:
       - ./processor:/opt/spark/work-dir
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master
@@ -64,15 +80,16 @@ services:
     container_name: spark-submit
     user: root
     depends_on:
-      kafka:
-        condition: service_healthy
+      kafka-setup:
+        condition: service_completed_successfully
       spark-master:
         condition: service_started
       spark-worker:
         condition: service_started
     volumes:
       - ./processor:/opt/spark/work-dir
-    command: /bin/sh -c "sleep 5 && /opt/spark/bin/spark-submit --master spark://spark-master:7077 --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.1,org.postgresql:postgresql:42.6.0 /opt/spark/work-dir/processor.py"
+    command: /bin/sh -c "echo 'Submitting Spark job' && \
+      /opt/spark/bin/spark-submit --master spark://spark-master:7077 --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.1,org.postgresql:postgresql:42.6.0 /opt/spark/work-dir/processor.py"
 
   producer:
     image: python:3.9-slim
@@ -81,5 +98,15 @@ services:
       kafka:
         condition: service_healthy
     volumes:
-      - ./:/app
-    command: /bin/sh -c "pip install kafka-python requests && python /app/producer/producer.py"
+      - ./backEnd:/app
+    env_file:
+      - .env
+    environment:
+      - PYTHONUNBUFFERED=1  
+    command: >
+      sh -c "
+        apt-get update && 
+        apt-get install -y netcat-openbsd && 
+        pip install kafka-python requests && 
+        sh /app/startProducers.sh
+      "
