--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,3 +110,26 @@ services:
         pip install kafka-python requests && 
         sh /app/startProducers.sh
       "
+
+  api-server:
+    image: python:3.9-slim
+    container_name: api-server
+    depends_on:
+      - db
+    volumes:
+      - ./backEnd/api:/app
+    working_dir: /app
+    ports:
+      - "8000:8000"
+    command: >
+      sh -c "
+      pip install --no-cache-dir -r requirements_api.txt &&
+      uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+      "
+    environment:
+      - PYTHONUNBUFFERED=1
+    networks:
+      - default
+
+
+ 
