--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.0
@@ -87,7 +86,7 @@ services:
       spark-worker:
         condition: service_started
     volumes:
-      - ./processor:/opt/spark/work-dir
+      - ./backEnd/processor:/opt/spark/work-dir
     command: /bin/sh -c "echo 'Submitting Spark job' && \
       /opt/spark/bin/spark-submit --master spark://spark-master:7077 --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.1,org.postgresql:postgresql:42.6.0 /opt/spark/work-dir/processor.py"
 
@@ -98,7 +97,7 @@ services:
       kafka:
         condition: service_healthy
     volumes:
-      - ./backEnd:/app
+      - ./backEnd/producer:/app
     env_file:
       - .env
     environment:
@@ -117,7 +116,7 @@ services:
     depends_on:
       - db
     volumes:
-      - ./backEnd/api:/app
+      - ./backEnd/apiServer:/app
     working_dir: /app
     ports:
       - "8000:8000"
