producer_incident added / minor changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,7 +82,7 @@ services:
       spark-worker:
         condition: service_started
     volumes:
-      - ./backEnd/processor:/opt/spark/work-dir
+      - ./back_end/processor:/opt/spark/work-dir
     command: /bin/sh -c "echo 'Submitting Spark job' && \
       /opt/spark/bin/spark-submit --master spark://spark-master:7077 --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.1,org.postgresql:postgresql:42.6.0 /opt/spark/work-dir/processor.py"
 
@@ -93,7 +93,7 @@ services:
       kafka:
         condition: service_healthy
     volumes:
-      - ./backEnd/producer:/app
+      - ./back_end/producer:/app
     env_file:
       - .env
     environment:
@@ -103,7 +103,7 @@ services:
         apt-get update && 
         apt-get install -y netcat-openbsd && 
         pip install kafka-python requests && 
-        sh /app/startProducers.sh
+        bash /app/start_producers.sh
       "
 
   api-server:
@@ -118,8 +118,8 @@ services:
       - "8000:8000"
     command: >
       sh -c "
-      pip install --no-cache-dir -r backEnd/apiServer/requirements_api.txt &&
-      uvicorn backEnd.apiServer.main:app --host 0.0.0.0 --port 8000 --reload
+      pip install --no-cache-dir -r back_end/api_server/requirements_api.txt &&
+      uvicorn back_end.api_server.main:app --host 0.0.0.0 --port 8000 --reload
       "
     environment:
       - PYTHONUNBUFFERED=1
