초기작성했던 실시간 도로소통부분 삭제 / yml fixed (producer_city_data) / readme renewed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
         echo 'Waiting for Kafka to be ready...' &&
         cub kafka-ready -b kafka:29092 1 30 &&
         echo 'Kafka is ready!' &&
-        for topic in realtime-traffic cctv-stream traffic-incidents city-data; do
+        for topic in cctv-stream traffic-incidents city-data; do
           kafka-topics --create --if-not-exists --topic $$topic --bootstrap-server kafka:29092 --partitions 1 --replication-factor 1;
         done && echo 'All topics created successfully.'"
   db:
@@ -86,7 +86,7 @@ services:
     command: /bin/sh -c "echo 'Submitting Spark job' && \
       /opt/spark/bin/spark-submit --master spark://spark-master:7077 --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.5.1,org.postgresql:postgresql:42.6.0 /opt/spark/work-dir/processor.py"
 
-  producer:
+  roducer:
     image: python:3.9-slim
     container_name: producer
     depends_on:
@@ -102,28 +102,8 @@ services:
       sh -c "
         apt-get update && 
         apt-get install -y netcat-openbsd && 
-        pip install kafka-python requests && 
-        bash /app/start_producers.sh
-      "
-
-  producer-citydata:
-    image: python:3.9-slim
-    container_name: producer-citydata
-    depends_on:
-      kafka:
-        condition: service_healthy
-    volumes:
-      - ./back_end/producer:/app
-    env_file:
-      - .env
-    environment:
-      - PYTHONUNBUFFERED=1  
-    command: >
-      sh -c "
-        apt-get update && 
-        apt-get install -y netcat-openbsd && 
         pip install kafka-python requests xmltodict && 
-        python /app/producer_city_data.py
+        bash /app/start_producers.sh
       "
 
   api-server:
